--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
-    <script src="charts.js"></script>
+  
   </head>
+  <header>
+
+  </header>
   <body>
     <script type="module" src="app.js"></script>
     <div>
+      <script src="charts.js"></script>
+      <h3>Afișare grafic evoluție pentru un indicator (PIB/SV/Pop) și o țară selectată de către utilizator</h3>
       <label for "selectTari">Selectati Tara</label>
       <select id="selectTari"></select>
       <label for "selectIndicator">Selectati Indicatorul</label>
       <select id="selectIndicator"></select>
-      <button id="btnAfiseaza">Afiseaza Grafic</button>
-      <button id="btnBubble">Bubble Chart</button>
+      <button id="btnAfiseaza">Afiseaza Grafic</button>   
     </div>
-    <div id="barChart" style="width: 600px; height:400px;">
-        Your chart here
+    <div> 
+      <h3>Afișare bubble chart pentru un an selectat de utilizator folosind un element de tip canvas</h3>
+      <label for "selectAn">Selectati Anul</label>
+      <select id="selectAni"></select>
+      <button id="btnBubble">Bubble Chart</button>
+      <button id="btnPlay"> Vezi Animatie </button>
+    </div>
+    <h3 id="title"></h3>
+    <div id="barChart" style="width: 900px; height:700px;">
     </div>
 
   </body>
